@@ -1,0 +1,9 @@
+#CTAFCONF user configuration file
+#this file is autogenerated by ct-profile
+#You can edit this file with: ct-profile
+
+var_set ctafconf_name 'Cedric GESTES'
+var_set ctafconf_mail 'ctaf42@gmail.com'
+var_set ctafconf_zprompt 'ctaf'
+var_set ctafconf_wm 'gnome'
+var_set ctafconf_backlist 'xsession'
